# Micelio

./: .gitignore  AIP_Especificacao_Tecnica_v0.2-Micelio.docx  Agent_Internet_Stack_v1.0-Micelio.docx  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/micelio/: main.go
examples/two_agents/: main.go
pkg/agent/: agent.go  agent_test.go
pkg/cognition/: capability.go  desire.go  engine.go  memory.go  store.go  trust.go  util.go
pkg/identity/: did.go  did_test.go
pkg/logging/: logger.go
pkg/network/: dht.go  discovery.go  gossip.go  handler.go  host.go  ratelimit.go
pkg/protocol/: message.go  negotiation.go  protocol_test.go  types.go
pkg/reputation/: persistence.go  reputation_test.go  selector.go  trust.go
schemas/: capability.schema.json  intent.schema.json  message.schema.json  propose.schema.json
sdks/python/: README.md  pyproject.toml  setup.py
sdks/python/examples/: basic_agent.py
sdks/python/micelio/: __init__.py  client.py  discovery.py  identity.py  negotiation.py  protocol.py
sdks/python/micelio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdks/python/tests/: test_identity.py  test_negotiation.py  test_protocol.py
